--- a/config.json
+++ b/config.json
@@ -1,116 +1,28 @@
 {
-    "language": "vi",
-    "DeveloperMode": false,
-    "autoCreateDB": true,
-    "iconUnsend": {
-        "status": true,
-        "icon": "💓"
-    },
-    "notiGroup": false,
-    "NOTIFICATION": false,
-    "YASSIN": false,
-    "allowInbox": false,
-    "commandDisabled": [],
-    "eventDisabled": [],
-    "BOTNAME": "ALIX BOT",
-    "AMDIN_NAME": "اليكسي السوري",
-    "FACEBOOK_ADMIN": "https://www.facebook.com/profile.php?id=61583947011416",
-    "PREFIX": ".",
-    "ADMINBOT": [
-        "61583947011416"
-    ],
-    "NDH": [
-        ""
-    ],
-    "DATABASE": {
-        "sqlite": {
-            "storage": "data.sqlite"
-        }
-    },
-    "APPSTATEPATH": "appstate.json",
-    "FCAOption": {
-        "forceLogin": true,
-        "listenEvents": true,
-        "pauseLog": true,
-        "logLevel": "error",
-        "selfListen": false,
-        "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 15_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/15.1 Mobile/15E148 Safari/604.1"
-    },
-    "version": "1.2.14",
-    "cave": {
-        "cooldownTime": 100000
-    },
-    "daily": {
-        "cooldownTime": 540000,
-        "rewardCoin": 500
-    },
-    "math": {
-        "WOLFRAM": "T8J8YV-H265UQ762K"
-    },
-    "menu": {
-        "autoUnsend": {
-            "status": true,
-            "timeOut": 60
-        },
-        "sendAttachments": {
-            "status": true,
-            "random": true,
-            "url": "https://i.imgur.com/LKkw8SL.jpg"
-        }
-    },
-    "minecraft": {
-        "APIKEY": ""
-    },
-    "randomname": {
-        "APIKEY": "mi451266190"
-    },
-    "subnau": {
-        "APIKEY": ""
-    },
-    "tikinfo": {
-        "apikey": "fOeckmtu"
-    },
-    "xidach": {
-        "maxPlayers": 5,
-        "normalWinBonus": 1,
-        "superWinBonus": 2,
-        "epicWinBonus": 4
-    },
-    "log": {
-        "enable": true
-    },
-    "spam": {
-        "spamDelay": 2
-    },
-    "subnautica": {
-        "APIKEY": ""
-    },
-    "adminOnly": false,
-    "اوامر": {
-        "autoUnsend": true,
-        "delayUnsend": 20
-    },
-    "بنك": {
-        "APIKEY": "chinhdz"
-    },
-    "هلب": {
-        "autoUnsend": true,
-        "delayUnsend": 300
-    },
-    "تاريخ": {
-        "cooldownTime": 200000000
-    },
-    "الرانك": {
-        "autoUnsend": true,
-        "unsendMessageAfter": 5
-    },
-    "كهف": {
-        "cooldown": 2000000000
-    },
-    "لقب": {
-        "APIKEY": "mi451266190"
-    },
-    "طقس": {
-        "OPEN_WEATHER": "c4ef85b93982d6627681b056e24bd438"
+    "monster": "https://i.imgur.com/lU8uEzh.png",
+    "food": "https://media.tenor.com/uBNaZoU0nDwAAAAC/monster-hunter.gif",
+    "create": "https://i.imgur.com/lU8uEzh.png",
+    "info": "https://i.imgur.com/lU8uEzh.png",
+    "sell": "https://i.imgur.com/NJupVEE.png",
+    "weapon": "https://i.imgur.com/6qVNGvo.png",
+    "upgrade": "https://media.tenor.com/uBNaZoU0nDwAAAAC/monster-hunter.gif",
+    "bag": "https://i.imgur.com/lU8uEzh.png",
+    "upgradeBag": "https://i.imgur.com/z0J7bWI.jpg",
+    "location": "https://i.imgur.com/FN0vFgX.png",
+    "fix": "https://media.tenor.com/uBNaZoU0nDwAAAAC/monster-hunter.gif",
+    "eatGif": "https://media.tenor.com/_rlPYvxnhz8AAAAC/monster-hunter-eating-eating.gif",
+    "setWeapon": "https://media.tenor.com/F4LrEwOMeCEAAAAC/armour-monster-hunter-world.gif",
+  "GreatSword": "https://i.imgur.com/7Y06Dmh.png",
+  "Sword": "https://i.imgur.com/HgOsWVA.png",
+  "Blades": "https://i.imgur.com/GyuXRup.png",
+  "Lance": "https://i.imgur.com/5ChWDgC.png",
+  "HBG": "https://i.imgur.com/zOyfyHD.png",
+  "LBG": "https://i.imgur.com/tvsFxze.png",
+    "levelUp": "https://media.tenor.com/H-kM9s1KygAAAAAC/level-up.gif",
+    "server": "https://media.tenor.com/QNFznynUWtMAAAAM/rajang-monster-hunter.gif",
+    "status_room": {
+        "1": "thieu nguoi",
+        "2": "du nguoi",
+        "3": "dang danh nhau"
     }
 }
