--- a/FastConfigFca.json
+++ b/FastConfigFca.json
@@ -20,7 +20,7 @@
 	"Websocket_Extension": {
 		"Status": false,
 		"ResetData": false,
-		"AppState_Path": "appstate.json"
+		"AppState_Path": "APPSTATE"
 	},
 	"HTML": {
 		"HTML": true,
