--- a/appstate.json
+++ b/appstate.json
@@ -1,119 +1,1 @@
-[
-    {
-        "key": "dbln",
-        "value": "%7B%2261583264609875%22%3A%22zCOaSUF1%22%2C%2261583458534158%22%3A%22i81L4MxY%22%2C%2261583564164771%22%3A%22DhRjeeCn%22%2C%2261583950893158%22%3A%22uGG6KPxG%22%2C%2261584092646161%22%3A%22C70Dm9iL%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.845Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "sb",
-        "value": "n10Kaet4jEkqb0X-q9MvOc6C",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "datr",
-        "value": "ymAKadxRraMRXA3n6j-LEM79",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B728x360x3",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "locale",
-        "value": "ar_AR",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "pas",
-        "value": "61582788928599%3A30i2SH9cDV%2C61583264609875%3AXGOZMphqnB%2C61582964862372%3AZBrrNhgqDF%2C61583458534158%3Awrd5lKpJqn%2C61583564164771%3AWSuxCVNUNs%2C61583950893158%3AsWld8gTzaU%2C61584092646161%3ArIFP4vE2uW",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61583458534158",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "xs",
-        "value": "43%3A8cg4P6Swz_3Y6g%3A2%3A1764017189%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "fr",
-        "value": "0xBJrzERY9vABMhT7.AWf9fkyGFyy_tW_OLQXnmaLpc2WskKSEUCU40NEoKw86WW9Blyo.BpCmDK..AAA.0.0.BpJMQn.AWfG_--j02CunU2acT4GWFlrrQg",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101020074%3BT%3A29400286",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2994%3Btimestamp%3A1764017191",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-24T21:29:36.846Z",
-        "lastAccessed": "2025-11-24T21:29:36.846Z"
-    }
-]
+hehj
